Vertical alignment css fixes for safari

--- a/frontend/src/css/components/CollectiveCard.css
+++ b/frontend/src/css/components/CollectiveCard.css
@@ -1,4 +1,5 @@
 .CollectiveCard {
+  vertical-align: top;
   position: relative;
   box-sizing: border-box;
   display: inline-block;
